# UTCAP_VFX_Studio

./: .gitignore  LICENSE  README.md  archpilot.py  first_setup.py
V0040/: .flake8  .gitignore  .pre-commit-config.yaml  Emergency_Update.bat  README.md  UTVFX.spec  UTVFX_Debug.spec  UT_Server.spec  alembic.ini  launch_app.bat  launch_console.bat  launch_server.bat  pyproject.toml  refresh_server.bat  requirements.txt  ut_server_config.json
V0040/LocalDatabase/: pg_hba.conf  postgresql.conf
V0040/_archive_scratch/: audit_report_v2.md  check_hash.py  download_pg.py  find_100_problems.py  fix_pg_users_table.py  found_issues.txt  found_issues_clean.txt  hardcoded_scan.txt  payload.json  sync_demo.py  test_db.py  ut_server_tree.txt  ut_vfx_tree.txt  verify_save2.py
V0040/database/: apply_indexes.bat  apply_indexes.py  apply_indexes_fast.py  apply_indexes_python.bat  check_if_working.py  check_index_status.py  create_indexes.sql  create_indexes_fast.sql  create_vector_indexes.sql  direct_check.py  emergency_check.py
V0040/demo/: Test_VFX_Data.xlsx
V0040/deployment/: CapsuleVFX.iss  CapsuleVFX.spec  Launcher.spec  run_tests.bat  setup_ut_central_server.iss  setup_ut_vfx_client.iss
V0040/logs/: crash_log.txt
V0040/migrations/: 001_initial_schema.sql  002_add_performance_indexes.sql
V0040/scripts/: backup_db.py  check_sql.py  check_versions.py  cleanup_files.bat  cleanup_root.bat  cleanup_root.py  extract_cache.py  extract_pagination.py  extract_proxy.py  final_system_check.py  fix_pyside6_enums.py  inspect_sqlite.py  install_pyblish.py  manage_migrations.py  migrate_stock_data.py  migrate_tracking_data.py  setup_credentials.py  telemetry_report.py  verify_dashboard_rows.py  verify_startup_safety.py
V0040/tests/: __init__.py  audit_system.py  check_stock_browser_import.py  check_syntax.py  concurrency_test.json  conftest.py  run_coverage.bat  simulate_scenarios.py  test_attendance.py  test_auth_migration.py  test_backup_recovery.py  test_concurrency.py  test_config_manager.py  test_consistency_protocol.py  test_core_features.py  test_database_manager.py  test_db_vacuum_concurrency.py  test_error_handling.py  test_library_manager.py  test_messenger_api_client.py  test_messenger_panels.py  test_messenger_state.py  test_metadata_engine.py  test_network_manager.py  test_performance.py  test_performance_monitor.py  test_postgres_integration.py  test_proxy_manager.py  test_security.py  test_shared_json_write_coordinator.py  test_smart_ingest_analyzer.py  test_stability_features.py  test_template_manager.py  test_user_manager.py  test_worker_threads.py  verify_features.py  (+1 more)
(+570 files in other folders)
