[tool.poetry]
name = "ut-vfx"
version = "1.8.0-beta.0"
description = "UT_VFX Production Tools & Dashboard"
authors = ["Utkarsh Tripathi <utkarshtripathi771@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ut_vfx" },
    { include = "tools" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
qasync = "^0.27.1"
sentry-sdk = "^1.30.0"
# Core
PySide6 = "^6.5.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
psutil = "^5.9.0"
cryptography = "^41.0.0"
openpyxl = "^3.1.2"
psycopg2-binary = "^2.9.9"

# Multimedia
opencv-python = "^4.8.0"
Pillow = "^10.0.0"
openimageio = "3.0.3.1"

# Visualization & Reporting
reportlab = "^4.0.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"
matplotlib = "^3.7.0"

# Dashboard (Legacy Support - migrating to PySide6 in Phase 2)

gspread = "^5.10.0"
oauth2client = "^4.1.3"
gazu = "^1.1.6"
watchdog = "^3.0.0"
bcrypt = "^5.0.0"
fileseq = "^3.1.1"
lucidity = "^1.6.0"

# VFX Standards (gracefully degrade if unavailable)
websockets = "^16.0"
uvicorn = "^0.42.0"
fastapi = "^0.135.2"
requests = "^2.33.1"
pyjwt = "^2.12.1"
python-multipart = "^0.0.22"
asyncpg = "^0.31.0"
fastembed = "^0.8.0"
imageio = "^2.37.3"
opencolorio = "^2.5.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.2.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
ruff = "^0.0.280"
safety = "^2.3.5"
pyinstaller = "^6.0.0"
types-openpyxl = "^3.1.0"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configs ---

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q --cov=ut_vfx --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
    "ut_vfx/tests"
]

[tool.coverage.run]
source = ["ut_vfx"]
omit = [
    "*/tests/*",
    "*/vfx_dashboard/*",
    "*/vfx_dashboard_pro/*",
    "*/__pycache__/*",
    "*/scripts/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
